--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,3 +8,32 @@ body,
 html {
   height: 100%;
 }
+
+.info.legend {
+  line-height: 18px;
+  color: #555;
+}
+
+.info.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+}
+
+.info.legend i.green {
+  background: green;
+}
+
+.info.legend i.yellow {
+  background: yellow;
+}
+
+.info.legend i.orange {
+  background: orange;
+}
+
+.info.legend i.red {
+  background: red;
+}
